# aml-emote2pitch

./: .gitignore  Inception_score.ipynb  NSDB.ipynb  README.md  eval.ipynb  pyproject.toml  training_notebook.ipynb  visualize.ipynb
data/pairings/: FER2chromagram-3-splits-22050Hz.csv  FER2chromagram-3-splits-44100Hz.csv  FER2constant-q-3-splits-22050Hz.csv  FER2constant-q-3-splits-44100Hz.csv  FER2constant-q3-splits22050Hz.csv  FER2constant-qv2-3-splits-22050Hz.csv  FER2mel-3-splits-22050Hz.csv  FER2mel-3-splits-44100Hz.csv
demos/: use_dataset_tutorial.ipynb
mlruns/0/: meta.yaml
mlruns/0/0e9bfe6ae52b4280acc0719dc5ced899/: meta.yaml
mlruns/0/0e9bfe6ae52b4280acc0719dc5ced899/metrics/: D loss  Fake GAN Loss  G loss  JS  L1 loss  NDB  inception_mean  inception_std
mlruns/0/0e9bfe6ae52b4280acc0719dc5ced899/params/: pairings_file
mlruns/0/0e9bfe6ae52b4280acc0719dc5ced899/tags/: mlflow.runName  spectrogram
mlruns/0/234d8793933f4751b1d71b1ef9468fc5/: meta.yaml
mlruns/0/234d8793933f4751b1d71b1ef9468fc5/metrics/: D loss  Fake GAN Loss  G loss  JS  L1 loss  NDB  inception_mean  inception_std
mlruns/0/234d8793933f4751b1d71b1ef9468fc5/params/: pairings_file
mlruns/0/234d8793933f4751b1d71b1ef9468fc5/tags/: mlflow.runName
mlruns/0/604e74d46fa64e4e88ed3a586bcc6259/: meta.yaml
mlruns/0/604e74d46fa64e4e88ed3a586bcc6259/metrics/: D loss  Fake GAN Loss  G loss  L1 loss
mlruns/0/604e74d46fa64e4e88ed3a586bcc6259/tags/: mlflow.runName
mlruns/0/6315bfd1a2d14e308bf0d388b7016075/: meta.yaml
mlruns/0/6315bfd1a2d14e308bf0d388b7016075/metrics/: D loss  Fake GAN Loss  G loss  JS  L1 loss  NDB  (+2 more)
mlruns/0/79c2ca50c15e4a27a594880e631861c9/: meta.yaml
mlruns/0/a5c563aa801e4cdca49a50e9e13fbe55/: meta.yaml
mlruns/0/a666c63288754e3bad47c83ff9db85e8/: meta.yaml
mlruns/0/b9a3e11dc0eb47a3a6a54216544d5c3f/: meta.yaml
mlruns/0/d7824e2af67f47cba2ab8a3cef65cab5/: meta.yaml
mlruns/0/fac84a3f63804eeba7180efc4ef6d4d6/: meta.yaml
src/: NSDB.ipynb  dataset.py  emote2pitch copy.py  emote2pitch.py  eval.py  model_helpers.py  music_preprocess.py  training.py
(+1657 files in other folders)
