[tool.poetry]
name = "aml-emote2pitch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
plotly = "^5.7.0"
seaborn = "^0.11.2"
Pillow = "^9.1.0"
tqdm = "^4.64.0"
sklearn = "^0.0"
scikit-image = "^0.19.2"
torchsummary = "^1.5.1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.13.1"

[tool.poe.tasks]
pytorch_cpu = "poetry run pip3 install torch torchvision torchaudio torchtext torchdata"
linus_pytorch_cpu = "poetry run pip3 install torch torchvision torchaudio torchtext torchdata --extra-index-url https://download.pytorch.org/whl/cpu"
pytorch_cuda = "poetry run pip3 install torch torchvision torchaudio torchtext torchdata --extra-index-url https://download.pytorch.org/whl/cu113"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
